tetrapak-publicweb/ui.dev/src/source/templates/components/megamenusolution/_megaMenuSolution.scss
.pw-megamenu {
    visibility: hidden;
    top: 80px;
    left: 100%;
    width: 100%;
    height: 100%;
    position: absolute;
    background: $color-white;
    z-index: 11;

    @media #{$desktop} {
        position: relative;
        visibility: visible;
        top: unset;
        left: unset;
        width: unset;
        height: unset;
        z-index: $zindex-nav;
    }

    &.is-open {
        position: absolute;
        top: -80px;
        height: auto;
        visibility: visible;
        transform: translateX(-100%);
        transition: transform 440ms ease-out;
    }

    &.is-close {
        visibility: hidden;
        transform: translateX(95%);
        transition: transform 1440ms ease-out;
    }

    img {
        @include border-radius($border-radius);
        display: none;
        @media #{$desktop} {
            display: block;
        }
    }
    @media #{$desktop} {
        display: flex;
        overflow: hidden;
        position: absolute;
        left: 0;
        width: 100%;
        justify-content: center;
        nav {
            width: 100%;
            margin: 0 auto;
            z-index: $zindex-s;
            position: relative;
        }
    }
    hr {
        @include margin-top($padding-l);
    }
    a {
        color: $color-congress-blue;
        @media #{$desktop} {
            color: $color-tundora;
            line-height: 20px;
        }
    }

    .row {
        justify-content: center;
    }
    .col {
        @include padding($padding-md);
        border-bottom: 1px solid $color-mercury;
        flex-basis: auto;
        @media #{$desktop} {
            @include padding(0);
            margin-left: 12px;
            margin-right: 12px;
            flex-basis: 0;
            border-bottom: 0;
        }
        &:last-child {
            @media #{$desktop} {
                @include padding(0);
                border-bottom: 0;
            }
        }
    }
    .heading-cta {
        @include padding($padding-md 0);
        display: block;
        border-bottom: 1px solid $color-mercury;
        margin-left: -15px;
        margin-right: -15px;

        .js-design-close-menu-solution {
            @include padding(18px $margin-md);
            @include margin(-16px -16px -16px 0);
            background-color: $color-wild-sand;
            overflow: hidden;
            @media #{$desktop} {
                @include padding(auto);
                @include margin(auto);
                background-color: none;
            }
            &::before {
                font-size: 16px;
                line-height: 16px;
                transform: rotate(180deg);
            }
        }

        @media #{$desktop} {
            margin-left: auto;
            margin-right: auto;
        }

        h2 {
            @include margin(0);
            display: inline-block;
            width: 90%;
        }
    }
    .heading-d-link {
        @include margin(28px 0);
        text-align: center;
        @media #{$desktop} {
            @include margin($margin-xl 0);
        }
    }
    h2 {
        @include line-height($font-l, $font-baseline);
        display: flex;
        font-family: $font-bold;
        font-size: $font-baseline;
        font-weight: 500;
        justify-content: space-between;
        text-align: center;
        @media #{$desktop} {
            @include line-height($font-l, $font-baseline);
            display: block;
            font-family: $font-black;
            font-size: $font-baseline;
            justify-content: center;
        }
    }
    h3 {
        @include font-size($font-baseline);
        @include line-height($font-l, $font-baseline);
        @include margin(0);
        color: $color-congress-blue;
        font-family: $font-bold;
        @media #{$desktop} {
            @include margin($margin-l $margin-zero $margin-zero);
            color: $color-tundora;
            font-family: $font-bold;
            font-size: 18px;
            font-weight: 500;
            line-height: 24px;
        }
    }
    p {
        @include font-size($font-sm);
        @include line-height($font-l, $font-baseline);
        @include margin($margin-l 0);
        @media #{$desktop} {
            @include font-size($font-sm);
            @include line-height($font-l, $font-baseline);
            @include margin($margin-l 0);
        }

        font-weight: 500;
    }

    p.teaser-spacing {
        @media #{$desktop} {
            margin-top: $margin-md;
        }
    }

    .col-side-links {
        @include padding(0);
        border: 0;
        @media #{$desktop} {
            border-left: 1px solid $color-mercury;
        }

        .list-side-links {
            @media #{$desktop} {
                @include padding-left(20px);
            }

            li {
                @include margin-bottom(0);
                @include padding($padding-md);
                border-bottom: 1px solid $color-mercury;
                a {
                    color: $color-congress-blue;
                    font-size: $font-baseline;
                    font-weight: 500;
                    line-height: 20px;
                }

                @media #{$desktop} {
                    @include margin-bottom($margin-l);
                    @include margin-left(0);
                    @include padding(0);
                    @include font-size($font-sm);
                    @include margin-right(0);
                    border-bottom: 0;
                }
            }
            span {
                @media #{$desktop} {
                    display: inline-block;
                    position: relative;
                    padding-right: 10px;
                    width: 220px;
                }
            }
        }
    }
    &__top {
        img {
            max-width: 100%;
            height: auto;
        }
        .col {
            @media #{$desktop} {
                width: 168px;
                max-width: 168px;
            }
            @media #{$desktop-xl} {
                width: 250px;
                max-width: 250px;
            }
        }
        @media #{$desktop} {
            @include margin($margin-xl 0);
        }
    }
    &__bottom {
        border-bottom: 1px solid $color-mercury;
        @media #{$desktop} {
            @include padding($margin-xl 0);
            background-color: $color-wild-sand;
            border-bottom: 0;
        }
        .heading-bottom-cta {
            display: flex;
            justify-content: space-between;
            align-items: center;
            @media #{$desktop} {
                @include margin-bottom($margin-xl);
                justify-content: center;
            }
            i.icon-Arrow_Right_pw {
                &::before {
                    font-size: 16px;
                    line-height: 16px;
                }
            }
        }
        h2 {
            @include margin(0);
            @include padding($padding-md 0);
            display: inline-block;
            color: $color-congress-blue;
            font-family: $font-bold;
            font-size: $font-baseline;
            font-weight: 500;
            // border-bottom: 1px solid $color-mercury;
            text-align: left;
            @media #{$desktop} {
                @include padding(0);
                color: $color-tundora;
                font-family: $font-black;
                border-bottom: 0;
                text-align: center;
            }
        }
        .col {
            @include margin(0);
            @include padding($padding-md);
            a {
                color: $color-congress-blue;
                @media #{$desktop} {
                    color: $color-tundora;
                    padding: $padding-zero;
                }
                &:hover {
                    color: $color-jordy-blue;

                }
            }
            @media #{$desktop} {
                @include margin(0 $margin-sm);
                padding: 0;
                width: 70px;
                max-width: 70px;
            }
            @media #{$desktop-xl} {
                width: 97px;
                max-width: 97px;
            }
            &:last-child {
                border-bottom: 1px solid $color-mercury;
                @media #{$desktop} {
                    border-bottom: 0;
                }
            }
        }
        @media #{$desktop} {
            @include font-size($font-sm);
            @include line-height($font-m-md, $font-baseline);
        }
        .bottom-teaser-list {
            @include padding(0 $padding-md);
            visibility: hidden;
            top: 80px;
            left: 100%;
            width: 100%;
            height: 100%;
            position: absolute;
            overflow: auto;
            background: $color-white;
            z-index: 11;
            @media #{$desktop} {
                display: flex;
                visibility: visible;
                position: initial;
                left: auto;
                width: auto;
                top: auto;
                justify-content: center;
                background: $color-wild-sand;
            }

            .js-design-close-menu {
                @include padding(18px $margin-md);
                @include margin(-16px);
                background-color: $color-wild-sand;
                &::before {
                    transform: rotate(-180deg);
                }
            }

            &.active {
                visibility: visible;
                transform: translateX(-100%);
                transition: transform 440ms ease-out;
            }
            &.hide {
                visibility: hidden;
                transform: translateX(95%);
                transition: transform 1440ms ease-out;
            }

            h2 {
                display: inline-block;
                color: $color-tundora;
                padding: 0;
                border-bottom: 0;
                text-align: center;
                width: 90%;
                i {
                    left: 0;
                    position: absolute;
                }
            }
            .img-title {
                @include margin-top($margin-xs);
                @include padding-top($padding-xxs);
                display: inline-block;
                font-weight: 500;
                line-height: 20px;
                @media #{$desktop} {
                    font-size: $font-sm;
                 }
            }
        }
    }
}
.pw-megamenu .col-side-links .list-side-links li a:hover {
    color: $color-jordy-blue;
}
.pw-megamenu .col-side-links .icon-Circle_Arrow_Right_pw {
    margin-left: $margin-sm;
    vertical-align: middle;
    @media #{$desktop} {
        display: inline-block;
        position: relative;
        margin-right: -10px;
        top: -8px;
    }
}

